fix: Make advantages hoverable on mobile
Tapping an advantage would follow the castaway link previously. Now it
will show the advantage name.

--- a/frontend/src/components/CastawayCard/CastawayCard.css
+++ b/frontend/src/components/CastawayCard/CastawayCard.css
@@ -32,6 +32,7 @@
     text-shadow: 3px 3px 5px black, -1px -1px 8px black;
     flex-direction: column;
     z-index: 1;
+    pointer-events: unset;
 }
 
 .tribe-circle {
